--- a/.github/workflows/loadChallenge.yml
+++ b/.github/workflows/loadChallenge.yml
@@ -16,21 +16,21 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }} # runs a test on Ubuntu, Windows and macOS
-
-    strategy:
-      matrix:
-        deno: ["v1.x", "nightly"]
-        os: [macOS-latest, windows-latest, ubuntu-latest]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Git Checkout Deno Module
         uses: actions/checkout@v2
+      - name: Use Deno Version 1.5.3
+        uses: denolib/setup-deno@v2
+        with:
+          deno-version: 1.5.3
+      - name: Build Deno Module
+        run: deno run --reload mod.ts
       - run: |
           date > generated.txt
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name NiewView
+          git config user.email tom.eckardt.it@gmail.com
           git add .
-          git commit -m "generated"
+          git commit -m "loaded new challenge from advent of code"
           git push
-
