--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": false,
   "scripts": {
     "start": "deno run --allow-read ./runChallenges.ts",
-    "test": "deno test"
+    "test": "deno test",
+    "loadChallenge": "deno run --allow-net --allow-write --allow-read --unstable ./loadChallenge.ts"
   }
 }
