--- a/.github/workflows/loadChallenge.yml
+++ b/.github/workflows/loadChallenge.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           deno-version: 1.5.3
       - name: Build Deno Module
-        run: deno run --reload mod.ts
+        run: yarn loadChallenge --year 2019 --day 1
       - run: |
           date > generated.txt
           git config user.name NiewView
