--- a/.github/workflows/loadChallenge.yml
+++ b/.github/workflows/loadChallenge.yml
@@ -3,16 +3,11 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-# This workflow will install Deno and run tests across stable and nightly builds on Windows, Ubuntu and macOS.
-# For more information see: https://github.com/denolib/setup-deno
-
-name: Deno
+name: Load Challenge from Advent Of Code
 
 on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+  schedule:
+    - cron: "2 11 1-24 12 *"
 
 jobs:
   test:
@@ -25,10 +20,9 @@ jobs:
         uses: denolib/setup-deno@v2
         with:
           deno-version: 1.5.3
-      - name: Build Deno Module
+      - name: Crete dir with files in repo
         run: yarn loadChallenge --year 2019 --day 1
       - run: |
-          date > generated.txt
           git config user.name NiewView
           git config user.email tom.eckardt.it@gmail.com
           git add .
