--- a/.github/workflows/loadChallenge.yml
+++ b/.github/workflows/loadChallenge.yml
@@ -37,7 +37,7 @@ jobs:
           DAY: "${{ steps.current-time.outputs.day }}"
         run: echo $TIME $R_TIME $F_TIME $YEAR $DAY
       - name: Crete dir with files in repo
-        run: yarn loadChallenge --year $YEAR --day $DAY
+        run: yarn loadChallenge --year ${{ steps.current-time.outputs.year }} --day ${{ steps.current-time.outputs.day }}
       - run: |
           git config user.name NiewView
           git config user.email tom.eckardt.it@gmail.com
