--- a/.github/workflows/loadChallenge.yml
+++ b/.github/workflows/loadChallenge.yml
@@ -6,10 +6,8 @@
 name: Load Challenge from Advent Of Code
 
 on:
-  push:
-    branches: [master]
-  # schedule:
-  #   - cron: "2 11 1-24 12 *"
+  schedule:
+    - cron: "2 11 1-24 12 *"
 
 jobs:
   test:
