--- a/.github/workflows/loadChallenge.yml
+++ b/.github/workflows/loadChallenge.yml
@@ -34,3 +34,9 @@ jobs:
           git add .
           git commit -m "loaded new challenge from advent of code"
           git push
+      - name: Create Issue
+        uses: JasonEtco/create-an-issue@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          filename: /${{ steps.current-time.outputs.year }}/${{ steps.current-time.outputs.day }}/ReadMe.md
