--- a/.github/workflows/loadChallenge.yml
+++ b/.github/workflows/loadChallenge.yml
@@ -6,10 +6,10 @@
 name: Load Challenge from Advent Of Code
 
 on:
-  push:
-    branches: [master]
-  # schedule:
-  #   - cron: "1 6 1-24 12 *"
+  # push:
+  #   branches: [master]
+  schedule:
+    - cron: "1 6 1-24 12 *"
 
 jobs:
   test:
