--- a/.github/workflows/loadChallenge_PartTwo.yml
+++ b/.github/workflows/loadChallenge_PartTwo.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   test:
-    # if: ${{ contains(join(github.event.commits.*.message, ', '), 'part1 \#') }}
+    if: ${{ contains(join(github.event.commits.*.message, ', '), 'part1 \#') == 'true' }}
     runs-on: ubuntu-latest
 
     steps:
