--- a/.github/workflows/loadChallenge_PartTwo.yml
+++ b/.github/workflows/loadChallenge_PartTwo.yml
@@ -9,9 +9,10 @@ on:
   push:
     branches:
       - master
+        
   workflow_dispatch:
     inputs:
-      alwaysrun: true
+      alwaysrun: 'true'
 
 jobs:
   test:
