--- a/.github/workflows/loadChallenge.yml
+++ b/.github/workflows/loadChallenge.yml
@@ -7,7 +7,7 @@ name: Load Challenge
 
 on:
   schedule:
-    - cron: "1 6 1-24 12 *"
+    - cron: "1 8 1-24 12 *"
 
 jobs:
   test:
@@ -29,7 +29,7 @@ jobs:
       - name: Create dir with files in repo
         env:
           SESSION_TOKEN: ${{ secrets.SESSION_TOKEN }}
-        run: yarn loadChallenge --year 2019 --day 1
+        run: yarn loadChallenge --year ${{ steps.current-time.outputs.year }} --day ${{ steps.current-time.outputs.day }}
       - run: |
           git config user.name NiewView
           git config user.email tom.eckardt.it@gmail.com
